package com.zergatstage.s02;

public enum LogType {
    Text,
    Poem,
    Database,
    System
}
